<resources>
    <string name="app_name">Github Users</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukan Username</string>
    <string name="username">Username</string>
    <string name="txt_fullname">Full Name</string>
    <string name="txt_repo">Repository 110</string>
    <string name="txt_company">Company Name</string>
    <string name="txt_address">Address</string>
    <string name="repository">Repository %1$s</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>